# email_triage_llm

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  agent.py  client.py  grpo_train.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
docs/: email_test_data.csv  test_data.jsonl  train_data.jsonl
email_triage_env/: Dockerfile  README.md  __init__.py  llm.py  models.py  pyproject.toml
email_triage_env/server/: .gitignore  app.py  email_triage_env_environment.py  requirements.txt
models/: qtable.json  qtable_v2.json
models/grpo_email_triage/: README.md
scripts/: generate_data.py
server/: app.py
